opa-standalone-envoy-example/app.yaml
# app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: example-app
  labels:
    app: example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      initContainers:
        - name: proxy-init
          image: openpolicyagent/proxy_init:v8
          # Configure the iptables bootstrap script to redirect traffic to the
          # Envoy proxy on port 8000. Envoy will be running as 1111, and port
          # 8282 will be excluded to support OPA health checks.
          args: ['-p', '8000', '-u', '1111', '-w', '8282']
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            runAsNonRoot: false
            runAsUser: 0
      containers:
        - name: app
          image: openpolicyagent/demo-test-server:v1
          ports:
            - containerPort: 8080
        - name: envoy
          image: envoyproxy/envoy:v1.26.3
          volumeMounts:
            - readOnly: true
              mountPath: /config
              name: proxy-config
          args:
            - 'envoy'
            - '--config-path'
            - '/config/envoy.yaml'
          env:
            - name: ENVOY_UID
              value: '1111'
        - name: opa
          image: openpolicyagent/opa:latest-envoy
          args:
            - 'run'
            - '--server'
            - '--log-level=debug'
            - '--addr=localhost:8181'
            - '--diagnostic-addr=0.0.0.0:8282'
            - '--set=services.default.url=http://bundle-server'
            - '--set=bundles.default.resource=bundle.tar.gz'
            - '--set=plugins.envoy_ext_authz_grpc.addr=:9191'
            - '--set=plugins.envoy_ext_authz_grpc.path=envoy/authz/allow'
            - '--set=decision_logs.console=true'
            - '--set=status.console=true'
            - '--ignore=.*'
          livenessProbe:
            httpGet:
              path: /health?plugins
              scheme: HTTP
              port: 8282
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health?plugins
              scheme: HTTP
              port: 8282
            initialDelaySeconds: 1
            periodSeconds: 3
      volumes:
        - name: proxy-config
          configMap:
            name: proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: example-app
spec:
  selector:
    app: example-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
#  - '--tls-cert-file=/certs/site.crt'
#             - '--tls-private-key-file=/certs/site.key'
#             - '--tls-ca-cert-file=/certs/root.crt'
#             - '--authentication=tls'
#             - '--authorization=basic'
