opa-standalone-envoy-example/curl-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-demo-server
spec:
  containers:
    - name: curl-demo
      image: curlimages/curl:8.1.2
      command: ['sh', '-c', 'while true; do sleep 3600; done']
      volumeMounts:
        - name: config-volume
          mountPath: /etc/certs
  volumes:
    - name: config-volume
      configMap:
        name: certs-config
  restartPolicy: Never
